--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <head>
         <meta charset="utf-8"/>
 
+        <meta property="og:title" content="DVD Screensaver">
+        <meta property="og:description" content="A simple, easily customizable bouncing DVD logo">
+        <meta property="og:image" content="/logos/default.svg">
+
         <link rel="stylesheet" href="style.css"/>
         <script src="script.js" defer></script>
     
