--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-
 <html>
     <head>
         <meta charset="utf-8"/>
 
-        <meta property="og:title" content="DVD Screensaver">
-        <meta property="og:description" content="A simple, easily customizable bouncing DVD logo">
+        <meta property="og:title" content="DVD Screensaver"/>
+        <meta property="og:description" content="A simple, easily customizable bouncing DVD logo"/>
 
         <link rel="stylesheet" href="style.css"/>
         <script src="script.js" defer></script>
